--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3"
+    "nuxt": "^2.15.3",
+    "node-fetch": "latest"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.0.9"
