big commit big boi commit

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "nuxt": "^2.15.3",
-    "node-fetch": "latest"
+    "node-fetch": "latest",
+    "nuxt": "^2.15.3"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.0.9",
