--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
   "github": {
     "silent": true
-  }
+  },
+  "version": 2,
+  "builds": [
+    {
+      "src": "nuxt.config.js",
+      "use": "@nuxtjs/vercel-builder"
+    }
+  ]
 }
