--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "core-js": "^3.9.1",
-    "node-fetch": "latest",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
