--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/redirect-module": "^0.3.1",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7"
   },
