--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"svelte-preprocess": "^4.9.8",
 		"tailwindcss": "^2.2.16",
 		"tslib": "^2.3.1",
-		"typescript": "^4.4.3"
+		"typescript": "^4.4.3",
+		"sass": "^1.42.1"
 	},
 	"type": "module",
 	"dependencies": {
